@startuml

title __ADAPTER's Class Diagram__\n

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      abstract class AchievementAdapter {
          - list : List<T>
          + AchievementAdapter()
          {abstract} + getLayoutId()
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
          {abstract} + convert()
          + setOnItemClickListener()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      interface OnItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      class VH {
          - mViews : SparseArray<View>
          - mConvertView : View
          + VH()
          {static} + get()
          + getView()
          + setText()
          + setImage()
          + setTime()
          + setUnShow()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      abstract class HistoryAdapter {
          - list : List<T>
          + HistoryAdapter()
          {abstract} + getLayoutId()
          + onCreateViewHolder()
          + onBindViewHolder()
          + setOnItemClickListener()
          + getItemCount()
          {abstract} + convert()
          + onItemDelete()
          + onMove()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      interface OnItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      class VH {
          - mViews : SparseArray<View>
          - mConvertView : View
          + VH()
          {static} + get()
          + getView()
          + setText()
          + setImage()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      class RecycleItemTouchHelper {
          {static} - TAG : String
          - mContext : Context
          + RecycleItemTouchHelper()
          + getMovementFlags()
          + isLongPressDragEnabled()
          + isItemViewSwipeEnabled()
          + onMove()
          + onSwiped()
          + onSelectedChanged()
          + onChildDraw()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      interface ItemTouchHelperCallback {
          {abstract} + onItemDelete()
          {abstract} + onMove()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      abstract class VicinityAdapter {
          - list : List<T>
          + VicinityAdapter()
          {abstract} + getLayoutId()
          + onCreateViewHolder()
          + onBindViewHolder()
          + setOnItemClickListener()
          + getItemCount()
          {abstract} + convert()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      interface OnItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.adapter {
      class VH {
          - mViews : SparseArray<View>
          - mConvertView : View
          + VH()
          {static} + get()
          + getView()
          + setText()
          + setIcon()
      }
    }
  }
  

  AchievementAdapter -up-|> Adapter
  AchievementAdapter o-- OnItemClickListener : mOnItemClickListener
  AchievementAdapter +-down- OnItemClickListener
  AchievementAdapter +-down- VH
  VH -up-|> ViewHolder
  HistoryAdapter -up-|> ItemTouchHelperCallback
  HistoryAdapter -up-|> Adapter
  HistoryAdapter o-- OnItemClickListener : mOnItemClickListener
  HistoryAdapter +-down- OnItemClickListener
  HistoryAdapter +-down- VH
  VH -up-|> ViewHolder
  RecycleItemTouchHelper -up-|> Callback
  RecycleItemTouchHelper o-- ItemTouchHelperCallback : helperCallback
  RecycleItemTouchHelper +-down- ItemTouchHelperCallback
  VicinityAdapter -up-|> Adapter
  VicinityAdapter o-- OnItemClickListener : mOnItemClickListener
  VicinityAdapter +-down- OnItemClickListener
  VicinityAdapter +-down- VH
  VH -up-|> ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
